--- a/css/list-group.css
+++ b/css/list-group.css
@@ -1,3 +1,15 @@
 @charset "UTF-8";
 /* CSS Document */
 
+.list-group {
+	list-style-type: none;
+}
+
+.list-group-item:before {
+	content: "";
+}
+
+.list-group-item {
+	display: block;
+}
+
